added youtube, fixed scrolling and nav bar

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         </nav>
 
         <!-- Home Page -->
-        <section class="home-page bg-fixed-full" id="homePage" style="display:none">
+        <section class="home-page bg-fixed-full" id="homePage">
         </section>
 
         <!-- Blog Page -->
         <section class="blog-page bg-fixed-full" id="blogPage" style="display:none">
+            <h2>BLOG</h2>
+            <div id="youtube-feed-container">
+                <!-- YouTube videos will be inserted here -->
+            </div>
             <article>
                 <h2>SKYRAY Full Set @ THE DESMOND</h2>
                 <p>Description of the performance goes here...</p>
