--- a/index.html
+++ b/index.html
@@ -36,13 +36,6 @@
             <div id="youtube-feed-container">
                 <!-- YouTube videos will be inserted here -->
             </div>
-            <article>
-                <h2>SKYRAY Full Set @ THE DESMOND</h2>
-                <p>Description of the performance goes here...</p>
-                <div class="video-container">
-                    <div class="play-button">▶</div>
-                </div>
-            </article>
         </section>
 
         <!-- Portfolio Page -->
@@ -56,6 +49,9 @@
             <div class="contact-form">
                 <h2>LEAVE A MESSAGE</h2>
                 <form>
+                    <img src="images/hard-currency-devil-books-open-design-2025.jpg" 
+                         alt="Hard Currency Design" 
+                         class="form-image">
                     <input type="text" placeholder="Name:" required>
                     <input type="email" placeholder="Email:" required>
                     <input type="tel" placeholder="Phone:">
@@ -63,7 +59,6 @@
                     <button type="submit">Send Message</button>
                 </form>
             </div>
-            <div class="contact-graphic"></div>
         </section>
     </main>
     <script src="js/script.js"></script>
