--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <main id="mainContent" style="display:none">
         <!-- Header with Navigation -->
         <header class="nav">
-            <div>HARD CURRENCY</div>
+            <h1>HARD CURRENCY</h1>
             <nav class="nav-links">
                 <a href="#home">HOME</a>
                 <a href="#blog">BLOG</a>
-                <a href="#portfolio">PORTFOLIO</a>
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
@@ -33,15 +32,9 @@
         <!-- Blog Page -->
         <section class="blog-page page-bg page-content bg-fixed-full" id="blogPage" style="display:none">
             <h2>BLOG</h2>
-            <div class="youtube-feed-container">
+            <article id="youtube-feed-container">
                 <!-- YouTube videos will be inserted here -->
-            </div>
-        </section>
-
-        <!-- Portfolio Page -->
-        <section class="portfolio-page page-bg page-content bg-fixed-full" id="portfolioPage" style="display:none">
-            <h2>PORTFOLIO</h2>
-            <!-- Portfolio content goes here -->
+            </article>
         </section>
 
         <!-- Contact Page -->
@@ -65,6 +58,9 @@
             </div>
         </section>
     </main>
+    <script>
+        window.YOUTUBE_API_KEY = "AIzaSyDUoTaJl1PS6Tt6nfAFB1U8NYFSh5JbGj8";
+    </script>
     <script src="js/script.js"></script>
 </body>
 </html>
